@@ -334,6 +334,9 @@ Trunk (unreleased changes)
     run-test-mapred, run-test-hdfs and run-test-hdfs-with-mr.
     (Sharad Agarwal via ddas)
 
+    HADOOP-5771. Implements unit tests for LinuxTaskController.
+    (Sreekanth Ramakrishnan and Vinod Kumar Vavilapalli via yhemanth)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
